# brazilgrid

./: .gitignore  README.md  pyproject.toml
infra/terraform/: main.tf
products/historico/: __init__.py
products/historico/dashboard/: app.py  app_usina.py  requirements.txt
products/historico/data/processed/: restricao_coff_eolica_tm_manifest.json
products/historico/data/raw/restricao_coff_eolica_tm/: RESTRICAO_COFF_EOLICA_2023_10_20260107.parquet  RESTRICAO_COFF_EOLICA_2023_11_20260107.parquet  RESTRICAO_COFF_EOLICA_2023_12_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_01_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_02_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_03_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_04_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_05_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_06_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_07_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_08_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_09_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_10_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_11_20260107.parquet  RESTRICAO_COFF_EOLICA_2024_12_20260107.parquet  RESTRICAO_COFF_EOLICA_2025_01_20260107.parquet  (+11 more)
products/historico/pipelines/: serve.py
products/historico/pipelines/curtailment/: __init__.py  backfill.py  backfill_eolico_usina.py  backfill_solar.py  backfill_solar_usina.py  eolico_conjunto.py  eolico_usina.py  solar_conjunto.py  solar_usina.py
shared/handlers/: __init__.py  clickhouse_handler.py  config_secrets.py  logging_config.py  manifest.py  s3_handler.py
