[project]
name = "brazilgrid"
version = "0.1.0"
description = "BrazilGrid - Análise de dados do setor elétrico brasileiro"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.7.0",
    "polars>=1.0.0",
    "prefect>=2.16.0",
    "boto3>=1.34.0",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "products"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
